--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Tetris Multiplayer",
   "main": "server/main.js",
   "dependencies": {
+    "express": "4.16.4",
     "ws": "^6.1.3"
   },
   "devDependencies": {},
